// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ResetStatusModal should match snapshot 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop in"
  />
  <div
    aria-labelledby="genericModalLabel"
    aria-modal="true"
    class="fade in modal"
    id="confirmModal"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign ConfirmModal a11y__modal  modal-dialog"
    >
      <div
        class="modal-content"
        role="document"
      >
        <div
          class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
        >
          <div
            class="modal-header"
          >
            <div
              class="GenericModal__header__text_container"
            >
              <div
                class="GenericModal__header"
              >
                <h1
                  class="modal-title"
                  id="genericModalLabel"
                >
                  Your status is set to "Away"
                </h1>
              </div>
            </div>
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="GenericModal__body padding"
            >
              <div>
                <div
                  class="ConfirmModal__body"
                  id="confirmModalBody"
                >
                  Would you like to switch your status to "Online"?
                  <div
                    class="checkbox text-right mb-0"
                  >
                    <label>
                      <input
                        type="checkbox"
                      />
                      Do not ask me again
                    </label>
                  </div>
                </div>
                <div
                  class="ConfirmModal__footer"
                >
                  <button
                    class="_button_1e05o_2 _button--emphasis-tertiary_1e05o_92 _button--size-medium_1e05o_43"
                    data-testid="cancel-button"
                    id="cancelModalButton"
                    type="button"
                  >
                    <span
                      class="_button__label_1e05o_20"
                    >
                      Stay as "Away"
                    </span>
                  </button>
                  <button
                    class="_button_1e05o_2 _button--emphasis-primary_1e05o_57 _button--size-medium_1e05o_43"
                    id="confirmModalButton"
                    type="button"
                  >
                    <span
                      class="_button__label_1e05o_20"
                    >
                      Set status to "Online"
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/ResetStatusModal should match snapshot, render modal for OOF status 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop in"
  />
  <div
    aria-labelledby="genericModalLabel"
    aria-modal="true"
    class="fade in modal"
    id="confirmModal"
    role="dialog"
    style="display: block; padding-right: 0px;"
    tabindex="-1"
  >
    <div
      class="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign ConfirmModal a11y__modal  modal-dialog"
    >
      <div
        class="modal-content"
        role="document"
      >
        <div
          class="GenericModal__wrapper GenericModal__wrapper-enter-key-press-catcher"
        >
          <div
            class="modal-header"
          >
            <div
              class="GenericModal__header__text_container"
            >
              <div
                class="GenericModal__header"
              >
                <h1
                  class="modal-title"
                  id="genericModalLabel"
                >
                  Your status is set to "Out of office"
                </h1>
              </div>
            </div>
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <div
              class="GenericModal__body padding"
            >
              <div>
                <div
                  class="ConfirmModal__body"
                  id="confirmModalBody"
                >
                  Would you like to switch your status to "Online" and disable automatic replies?
                </div>
                <div
                  class="ConfirmModal__footer"
                >
                  <button
                    class="_button_1e05o_2 _button--emphasis-tertiary_1e05o_92 _button--size-medium_1e05o_43"
                    data-testid="cancel-button"
                    id="cancelModalButton"
                    type="button"
                  >
                    <span
                      class="_button__label_1e05o_20"
                    >
                      Stay "Out of office"
                    </span>
                  </button>
                  <button
                    class="_button_1e05o_2 _button--emphasis-primary_1e05o_57 _button--size-medium_1e05o_43"
                    id="confirmModalButton"
                    type="button"
                  >
                    <span
                      class="_button__label_1e05o_20"
                    >
                      Set status to "Online"
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
